# ohio-property-knowledge-graph

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
docs/: glossary.md  index.md  ontology-overview.md  sparql-guide.md
examples/data/: README.md
examples/queries/: README.md  find-residential-property.rq  foreclosure-transfers.rq  homestead-exempt-properties.rq  list-parcels.rq  mortgage-lookup.rq  owner-lookup.rq  ownership-interests.rq  property-valuation.rq  transfer-history.rq
ontology/: cincy-appraisal-areas.ttl  cincy-deed-types.ttl  cincy-housing.ttl  cincy-land-use-codes.ttl  cincy-school-districts.ttl  cincy-sketch-id-codes.ttl  cincy-tax-districts.ttl  cincy-transfer-vocab.ttl
scripts/: README.md  validate.sh
scripts/db_to_rdf/: README.md  db_to_rdf.py  mapping.example.yaml  pyproject.toml  requirements.txt
tests/: README.md  sparql-tests.rq
